# h264motion

./: CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt  h264motion.c  h264motion.h
src/: CMakeLists.txt  main.c
